--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ author_profile: false
 description: "A podcast about life, dating and relationship advice with a kink twist"
 title: "Gallo Chingon's digital slice"
 og_title: "Gallo Chingon's digital slice"
-
+sitemap: true
 header:
     overlay_image: "/assets/images/header-home.png"
     og_image: "/assets/images/og-default-header.png"
