--- a/_pages/episodes.html
+++ b/_pages/episodes.html
@@ -3,6 +3,7 @@ title: "Episodes"
 layout: posts
 permalink: /episodes/
 author_profile: false
+sitemap: true
 header:
     overlay_filter: "0.6"
     overlay_image: "/assets/images/header-episodes.png"
