--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ title: "Gallo Chingon's digital slice"
 og_title: "Gallo Chingon's digital slice"
 sitemap: true
 header:
+    overlay_filter: "0.6"
     overlay_image: "/assets/images/header-home.png"
     og_image: "/assets/images/og-default-header.png"
 excerpt: "<div class='header_box'><div class='author__avatar'><img src='/assets/images/avatar.png' itemprop='image'></div>
