--- a/_pages/category-archive.html
+++ b/_pages/category-archive.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-permalink: /categories/
-title: "Episodes by Category"
+permalink: /featured/
+title: "Podcast Episodes Featured In"
 author_profile: true
 ---
 
