--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ excerpt: "<div class='header_box'><div class='author__avatar'><img src='/assets/
 <a target='_blank' href='mailto:el.gallo.cochino@gmail.com' title='el.gallo.cochino@gmail.com'><i class='fas fa-envelope' aria-hidden='true'></i></a>
 </div>
 <h4>A podcast about life, dating and relationship advice with a kink twist</h4>
-<iframe src='https://open.spotify.com/embed-podcast/show/3XjoipCU3QzeIaQAAQpBdW' width='100%' height='232' frameborder='0' allowtransparency='true' allow='encrypted-media'></iframe>
+<iframe src='https://embed.podcasts.apple.com/us/podcast/sucias-are-my-favorite/id1548173787?itsct=podcast_box_player&amp;itscg=30200&amp;ls=1&amp;theme=dark' width='100%' height='450' frameborder='0' allowtransparency='true' allow='encrypted-media'></iframe>
 </div>"
 ---
 
