--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ header:
     overlay_filter: "0.6"
     overlay_image: "/assets/images/header-home.png"
     og_image: "/assets/images/og-default-header.png"
-excerpt: "<div class='header_box'><div class='author__avatar'><img src='/assets/images/avatar.png' itemprop='image'></div>
-<div class='social__links'>
+excerpt: "<div class='social__links'>
 <a target='_blank' href='https://open.spotify.com/show/3XjoipCU3QzeIaQAAQpBdW' title='Spotify'><i class='fab fa-spotify' aria-hidden='true'></i></a>
 <a target='_blank' href='https://www.google.com/podcasts?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy80MjI0YzYzYy9wb2RjYXN0L3Jzcw==' title='Google Podcasts'><i class='fab fa-google-play' aria-hidden='true'></i></a>
 <a target='_blank' href='https://podcasts.apple.com/us/podcast/sucias-are-my-favorite/id1548173787?uo=4' title='Apple Podcasts'><i class='fas fa-podcast' aria-hidden='true'></i></a>
