--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@ header:
     overlay_image: "/assets/images/header-home.png"
     og_image: "/assets/images/og-default-header.png"
 excerpt: "<div class='social__links'>
-<a target='_blank' href='https://open.spotify.com/show/3XjoipCU3QzeIaQAAQpBdW' title='Spotify'><i class="fa-brands fa-spotify"></i></a>
-<a target='_blank' href='https://www.google.com/podcasts?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy80MjI0YzYzYy9wb2RjYXN0L3Jzcw==' title='Google Podcasts'><i class="fa-brands fa-google-play"></i></a>
-<a target='_blank' href='https://podcasts.apple.com/us/podcast/sucias-are-my-favorite/id1548173787?uo=4' title='Apple Podcasts'><i class="fa-solid fa-podcast"></i></a>
-<a target='_blank' href='https://anchor.fm/sucias' title='Anchor.fm'><i class="fa-solid fa-microphone-lines"></i></a>
-<a target='_blank' href='https://instagram.com/sucias_my_fave' title='Instagram'><i class="fa-brands fa-instagram"></i></a>
-<a target='_blank' href='https://twitter.com/sucias_my_fave' title='Twitter'><i class="fa-brands fa-twitter"></i></a>
-<a target='_blank' href='mailto:el.gallo.cochino@gmail.com' title='el.gallo.cochino@gmail.com'><i class="fa-solid fa-envelope"></i></a></div>
+<a target='_blank' href='https://open.spotify.com/show/3XjoipCU3QzeIaQAAQpBdW' title='Spotify'><i class="fa-brands fa-spotify" aria-hidden='true'></i></a>
+<a target='_blank' href='https://www.google.com/podcasts?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy80MjI0YzYzYy9wb2RjYXN0L3Jzcw==' title='Google Podcasts'><i class="fa-brands fa-google-play" aria-hidden='true'></i></a>
+<a target='_blank' href='https://podcasts.apple.com/us/podcast/sucias-are-my-favorite/id1548173787?uo=4' title='Apple Podcasts'><i class="fa-solid fa-podcast" aria-hidden='true'></i></a>
+<a target='_blank' href='https://anchor.fm/sucias' title='Anchor.fm'><i class="fa-solid fa-microphone-lines" aria-hidden='true'></i></a>
+<a target='_blank' href='https://instagram.com/sucias_my_fave' title='Instagram'><i class="fa-brands fa-instagram" aria-hidden='true'></i></a>
+<a target='_blank' href='https://twitter.com/sucias_my_fave' title='Twitter'><i class="fa-brands fa-twitter" aria-hidden='true'></i></a>
+<a target='_blank' href='mailto:el.gallo.cochino@gmail.com' title='el.gallo.cochino@gmail.com'><i class="fa-solid fa-envelope" aria-hidden='true'></i></a></div>
 <h2>A podcast about life, dating and relationship advice with a kink twist</h2>
 <iframe src='https://embed.podcasts.apple.com/us/podcast/sucias-are-my-favorite/id1548173787?itsct=podcast_box_player&amp;itscg=30200&amp;ls=1&amp;theme=dark' width='100%' height='450' frameborder='0' allowtransparency='true' allow='encrypted-media'></iframe>"
 ---
